# hexlet-git

./: .gitignore  INFO.md  README.md  forest.c
hexlet-hello-world/: pyproject.toml
hexlet_pytest/: hello.py  pyproject.toml
hexlet_pytest/hexlet_pytest/: example.py
hexlet_pytest/tests/: test_example.py  test_stack.py
hexlet_pytest/tests/test_data/: result.txt
hexlet_testing/: hello.py  pyproject.toml
hexlet_testing/hexlet_testing/scripts/: main.py
hexlet_testing/hexlet_testing/tests/: test_capitalize.py
