[project]
name = "hexlet_testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_testing"]

[project.scripts]
hex-test = "hexlet_testing.scripts.main:main"
